@@ -17,6 +17,8 @@ Changes in JMurmel-1.4.4 relative to JMurmel-1.4.3
  * fixed compiled random-state-p and make-random-state
  * fixed passing *command-line-argument-list between interpreter <=> compiled Murmel
  * fixed compiled presized "make-hash-table"
+ * fixed mlib: key-var and value-var now are bound to nil in the result form in "doplist"
+   (was: not bound)
 
 
 Changes in JMurmel-1.4.3 relative to JMurmel-1.4.2
